fix letter spacing

--- a/src/_scss/pages/search/_newTasStyles.scss
+++ b/src/_scss/pages/search/_newTasStyles.scss
@@ -19,7 +19,6 @@
     }
     .checkbox-tree-label__value-container-value {
         font-size: 10px !important;
-        display: flex;
         align-items: center;      
         color: $gray-90;
         border-radius: 2px;
